@@ -35,6 +35,7 @@ Where you should replace XXXXX with a bug-id.
 0.74: please submit patches for this section with actual code/doc
       patches!
 
+* removed static variables from pam_tally (Bug 117434 - agmorgan)
 * added copyright message to pam_access module from original logdaemon
   sources (Bug 125022 - agmorgan)
 * configure.in - removed the GCC -Wtraditional flag (Bug 124923 - agmorgan)
